# STP

./: .gitignore
10_lab/ProcessorTemplateСlass/: Lib.cs  ProcessorTemplateСlass.csproj  ProcessorTemplateСlass.sln  Program.cs
10_lab/UnitTests/: UnitTest1.cs  UnitTests.csproj
11_lab/ProbabilisticModeling/: ProbabilisticModeling.cpp  ProbabilisticModeling.sln  ProbabilisticModeling.vcxproj  ProbabilisticModeling.vcxproj.filters
12_lab/Lab12cs/: Lab13cs.sln
12_lab/lab12/: CMakeLists.txt  build.sh  main  main.cpp
12_lab/lab12/binarySearch/: CMakeLists.txt  binarySearch.cpp  binarySearch.h
12_lab/lab12/bubbleSort/: CMakeLists.txt  bubbleSort.cpp  bubbleSort.h
12_lab/lab12/cyclicShiftLeft/: CMakeLists.txt  cyclicShiftLeft.cpp  cyclicShiftLeft.h
12_lab/lab12/findMinElement/: CMakeLists.txt  findMinElement.cpp  findMinElement.h
12_lab/lab12/minElementWithIndex/: CMakeLists.txt  minElementWithIndex.cpp  minElementWithIndex.h
12_lab/lab12/replaceAll/: CMakeLists.txt  replaceAll.cpp  replaceAll.h
12_lab/lab12/reverseArray/: CMakeLists.txt  reverseArray.cpp  reverseArray.h
13_lab/lab13/: CMakeLists.txt  main  main.cpp
13_lab/lab13cs/: lab14cs.sln
14_lab/: TSetField.h  TSetInheritance.cpp  build.sh  main  main.cpp
14_lab/TSet/: TSet.h  TSet.sln  TSet.vcxproj  TSet.vcxproj.filters
14_lab/UnitTests/: UnitTests.cpp  UnitTests.vcxproj
15_lab/: TMember.cpp  TMember.h  TPoly.cpp  TPoly.h  build.sh  main
15_lab/TPoly/: TMember.cpp  TMember.h  TPoly.cpp  TPoly.h  TPoly.sln  TPoly.vcxproj  TPoly.vcxproj.filters
15_lab/Tests/: Tests.vcxproj  test.cpp
(+153 files in other folders)
